fix clipping masks

--- a/assets/css/microverse.css
+++ b/assets/css/microverse.css
@@ -488,44 +488,46 @@ button#VRButton {
 @media (min-width: 769px) {
     #worldMenu-shareButton {
         clip-path: polygon(
-            0% 67%,
-            15% 60%,
-            21% 54%,
-            28% 49%,
-            35% 40%,
-            38% 27%,
-            42% 18%,
-            44% 0,
-            100% 1%,
+            46% 0%,
+            100% 0,
             100% 100%,
-            0% 100%
+            0 100%,
+            0 67%,
+            9% 66%,
+            17% 60%,
+            23% 53%,
+            29% 44%,
+            34% 34%,
+            38% 28%,
+            41% 21%,
+            44% 14%
         );
     }
 
     #worldMenuBtn {
         clip-path: polygon(
-            100% 65%,
-            87% 62%,
-            77% 55%,
-            71% 47%,
-            66% 37%,
-            60% 28%,
-            58% 14%,
-            60% 0,
-            0 0,
+            100% 66%,
+            100% 100%,
             0 100%,
-            100% 100%
+            0 0,
+            54% 0,
+            58% 14%,
+            61% 23%,
+            65% 33%,
+            69% 41%,
+            73% 46%,
+            77% 52%,
+            81% 57%,
+            86% 62%,
+            91% 64%
         );
     }
 
+    #homeBtn:hover,
+    #worldMenu-helpButton:hover,
     #worldMenuBtn:hover,
     #worldMenu-shareButton:hover {
-        background-color: rgba(0, 0, 0, 0.3);
-    }
-
-    #homeBtn:hover,
-    #worldMenu-helpButton:hover {
-        background-color: rgba(0, 0, 0, 0.3);
+        background-color: rgba(0, 0, 0, 0.1);
     }
 }
 @media (max-width: 601px) {
